--- a/assets/style.css
+++ b/assets/style.css
@@ -103,10 +103,7 @@ header {
 .devis {
 	background-color: var(--secondary-color);
 }
-#slider-content {
-	z-index: -1;
-	position: relative;
-}
+
 #banner {
 	display: flex;
 	flex-direction: column;
@@ -116,6 +113,16 @@ header {
 	min-height: 470px;
 	position: relative;
 	object-fit: cover;
+}
+#slider-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	z-index: -1;
+	position: relative;
+	width: 100%;
+	min-height: 470px;	
 }
 .banner-img {
 	position: absolute;
